# Mandelbrot-Set-Parallel-Programming-CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mandel.c  mandel.cpp  mandel.h  mandel_mpi.c  mandel_mpi.cpp  mandel_openmp.c  mandelbrot_omp.pgm  timer.h
